# Oh-my--paper

./: .gitignore  README.md  README.zh.md  index.html  main.aux  main.bcf  main.blg  main.fdb_latexmk  main.fls  main.out  main.run.xml  main.xdv  package-lock.json  package.json  vite.config.ts
.claude-plugin/: marketplace.json
.github/workflows/: release.yml
.omc/state/: subagent-tracking.json
icons/: icon.icns
scripts/: install-codex-plugin.ps1  install-codex-plugin.sh  manage-codex-plugin.mjs  uninstall-codex-plugin.ps1  uninstall-codex-plugin.sh
sidecar/: agent.mjs  index.mjs  opencode.mjs  package-lock.json  package.json
sidecar/providers/: anthropic.mjs  index.mjs  openai.mjs  tool-call.mjs
sidecar/runners/: claude-code-runner.mjs  codex-runner.mjs  experiment-mcp-server.mjs
sidecar/tools/: read.mjs  registry.mjs
sidecar/utils/: dispatch-agent.mjs  resolve-cli.mjs
skills/claude-code-dispatch/: SKILL.md
skills/inno-idea-generation/: SKILL.md
skills/literature-pdf-ocr-library/: SKILL.md
skills/research-literature-trace/: SKILL.md
skills/research-pipeline-planner/: SKILL.md
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/skills/codex-dispatch/: SKILL.md
src-tauri/resources/skills/research-pipeline-planner/: SKILL.md
src-tauri/src/: commands.rs  db.rs  desktop_menu.rs  lib.rs  main.rs  models.rs  schema.sql  state.rs
src-tauri/src/services/: agent.rs  cc_connect.rs  compile.rs  experiment.rs  figure.rs  mod.rs  project.rs  provider.rs  research.rs  sidecar.rs  skill.rs  sync.rs  terminal.rs  wechat_bridge.rs
src/components/: ArtifactPreviewModal.tsx  PdfPane.tsx  (+17 more)
workers/: package.json  wrangler.toml
(+69 files in other folders)
