[package]
name = "viewerleaf"
version = "0.2.0"
description = "ViewerLeaf academic writing workbench"
authors = ["donkfeng"]
edition = "2021"

[lib]
name = "viewerleaf_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
dirs = "6"
portable-pty = "0.9"
regex = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
thiserror = "2"
tokio = { version = "1", features = ["process", "rt-multi-thread", "sync"] }
uuid = { version = "1", features = ["serde", "v4"] }
walkdir = "2"

[target.'cfg(target_os = "macos")'.dependencies]
muda = { version = "0.17.1", default-features = false }
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["std", "NSApplication", "NSMenu", "NSResponder"] }
